--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,11 @@
 </div>
 
 <div>
+  <h3>InputMask</h3>
+  <p-inputmask mask="99-999999" [(ngModel)]="value" placeholder="99-999999"/>
+</div>
+
+<div>
   <h3>List Box</h3>
   <p-listbox [options]="listBox" [(ngModel)]="selectedCity" class="w-full md:w-56"/>
 </div>
@@ -54,6 +59,12 @@
 <div>
   <h3>Password</h3>
   <p-password [(ngModel)]="password" [feedback]="false"></p-password>
+</div>
+
+<div>
+  <h3>RadioButton</h3>
+
+
 </div>
 
 <div>
@@ -105,7 +116,7 @@
 
 <div>
   <h3>Table-Row</h3>
-  <p-toggleswitch [(ngModel)]="checked" />
+  <p-toggleswitch [(ngModel)]="checked"/>
   <p-table [value]="customers" selectionMode="single" [(selection)]="selectedCustomer"
            dataKey="id" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template #header>
@@ -129,15 +140,15 @@
   <h3>Card</h3>
   <p-card header="Card Kullanımı">
     <p class="m-0">
-      Lorem ipsum dolor sit amet...
+      Angular çalışmalarında card kullanımı
     </p>
   </p-card>
 </div>
 <div>
   <h3>DatePicker-Icon</h3>
-  <p-datepicker [(ngModel)]="date1" [showIcon]="true" [showOnFocus]="false" />
+  <p-datepicker [(ngModel)]="date1" [showIcon]="true" [showOnFocus]="false"/>
 
-  <p-datepicker [(ngModel)]="date2" [iconDisplay]="'input'" [showIcon]="true" inputId="icondisplay" />
+  <p-datepicker [(ngModel)]="date2" [iconDisplay]="'input'" [showIcon]="true" inputId="icondisplay"/>
 
   <p-datepicker [(ngModel)]="date3" [iconDisplay]="'input'" [showIcon]="true" [timeOnly]="true">
     <ng-template #inputicon let-clickCallBack="clickCallBack">
@@ -148,4 +159,97 @@
 
 <div>
   <h3>DatePicker Time</h3>
+  <p-datepicker inputId="calendar-12h" [(ngModel)]="dateTime12h" [showTime]="true" [hourFormat]="'12'"/>
+
+  <p-datepicker inputId="calendar-24h" [(ngModel)]="dateTime24h" [showTime]="true" [hourFormat]="'24'"/>
+
+  <p-datepicker inputId="calendar-timeonly" [(ngModel)]="time" [timeOnly]="true"/>
+</div>
+
+<div>
+  <h3>Panel</h3>
+  <p-panel header="Angular çalışmaları" [toggleable]="true">
+    <p class="m-0">
+      Angular çalışmaları yapılmaktadır.
+    </p>
+  </p-panel>
+
+</div>
+
+<div>
+  <h3>Tabs</h3>
+  <p-tabs value="0">
+    <p-tablist>
+      <p-tab value="0">Hakkında</p-tab>
+      <p-tab value="1">İletişim</p-tab>
+      <p-tab value="2">Biz kimiz</p-tab>
+    </p-tablist>
+    <p-tabpanels>
+      <p-tabpanel value="0">
+        <p class="m-0">
+          Angular çalışmaları yapılmakta
+        </p>
+      </p-tabpanel>
+      <p-tabpanel value="1">
+        <p class="m-0">
+          Tlf:555555555
+        </p>
+      </p-tabpanel>
+      <p-tabpanel value="2">
+        <p class="m-0">
+          FullStackDeveloper
+        </p>
+      </p-tabpanel>
+    </p-tabpanels>
+  </p-tabs>
+
+</div>
+
+<div>
+  <h3>ConfirmDiyalog</h3>
+
+</div>
+
+<div>
+  <h3>Dialog</h3>
+  <p-button (click)="showDialog()" label="Düzenle"/>
+  <p-dialog header="Profili düzenle" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+    <span class="p-text-secondary block mb-8">Bilgilerinizi güncelleyin.</span>
+    <div class="flex items-center gap-4 mb-4">
+      <label for="username" class="font-semibold w-24">Kullanıcı Adı</label>
+      <input pInputText id="username" class="flex-auto" autocomplete="off"/>
+    </div>
+    <div class="flex items-center gap-4 mb-8">
+      <label for="email" class="font-semibold w-24">E-posta</label>
+      <input pInputText id="email" class="flex-auto" autocomplete="off"/>
+    </div>
+    <div class="flex justify-end gap-2">
+      <p-button label="İptal" severity="secondary" (click)="visible = false"/>
+      <p-button label="Kaydet" (click)="visible = false"/>
+    </div>
+  </p-dialog>
+</div>
+<div>
+  <h3>ChartJs</h3>
+  <p-chart type="bar" [data]="basicData" [options]="basicOptions"/>
+</div>
+
+<div>
+  <h3>Toast/Basic</h3>
+  <p-toast/>
+  <p-button (onClick)="show()" label="Show"/>
+</div>
+<div>
+  <h3>Toast/Severity</h3>
+
+  <p-toast/>
+  <p-button type="button" pRipple (click)="showSuccess()" label="Success" severity="success"/>
+  <p-button type="button" pRipple (click)="showInfo()" label="Info" severity="info"/>
+  <p-button type="button" pRipple (click)="showWarn()" label="Warn" severity="warn"/>
+  <p-button type="button" pRipple (click)="showError()" label="Error" severity="danger"/>
+</div>
+
+<div>
+  <h3>Upload</h3>
+
 </div>
