Html css düzenlemeleri

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,31 @@
-<h2>Personel Front</h2>
-<!--
-<app-calismalar></app-calismalar> -->
-<!--Command-->
+<div class="baslik_div">
+  <div class="kolon" style="float: left; font-weight: bold">
+    LOGO
+  </div>
+  <div class="kolon"
+       style="text-align: center; align-items: center; margin-left: 25%; font-size: 25px; font-weight: bold; color: #6767f1">
+    PERSONEL İNSAN KAYNAKLARI SİSTEMİ
+  </div>
+
+  <div class="kolon" style="float: right; font-weight: bold">
+    ÇIKIŞ YAP
+  </div>
+</div>
+
+<div class="govde_div">
+  <div class="govde" style="float: left">
+    <div class="menu">
+      <div>
+        <h3>Personel</h3>
+      </div>
+      <div>
+        <h3>Birimler</h3>
+      </div>
+    </div>
+  </div>
+  <div class="govde" style="">
+    <div class="data">
+      DATA
+    </div>
+  </div>
+</div>
