--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,23 @@
 <div class="baslik_div">
-  <div class="kolon" style="float: left; font-weight: bold">
-    LOGO
-  </div>
-  <div class="kolon"
-       style="text-align: center; align-items: center; margin-left: 25%; font-size: 25px; font-weight: bold; color: #6767f1">
-    PERSONEL İNSAN KAYNAKLARI SİSTEMİ
-  </div>
-
-  <div class="kolon" style="float: right; font-weight: bold">
-    ÇIKIŞ YAP
-  </div>
+  <div class="kolon sol">LOGO</div>
+  <div class="kolon orta">PERSONEL İNSAN KAYNAKLARI SİSTEMİ</div>
+  <div class="kolon sag">ÇIKIŞ YAP</div>
 </div>
 
-<div class="govde_div">
-  <div class="govde" style="float: left">
-    <div class="menu">
-      <div>
-        <h3>Personel</h3>
-      </div>
-      <div>
-        <h3>Birimler</h3>
-      </div>
-    </div>
-  </div>
-  <div class="govde" style="">
-    <div class="data">
-      DATA
-    </div>
-  </div>
-</div>
+
+<!--<nav>Web siterinde gezinnme işlemlerinde kullanılır örenğin menu başında</nav>
+<ul>Liste formatında kullanılır </ul>
+<li>ul içinde tanımlanır her bir liste öğesini tanımlar</li>
+<a>Bağlantı, link etiketleri için kullanılır </a>
+<href>Bağlantının gideceği adresi belirtir</href>  -->
+
+<nav class="menu">
+  <ul>
+    <li><a href="#">Personel</a></li>
+    <li><a href="#">Birimler</a></li>
+    <li><a href="#">Şehirler</a></li>
+    <li><a href="#">Raporlar</a></li>
+    <li><a href="#">Öğrenim</a></li>
+  </ul>
+</nav>
+
