--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <div class="baslik_div">
   <div class="kolon sol">LOGO</div>
   <div class="kolon orta">PERSONEL İNSAN KAYNAKLARI SİSTEMİ</div>
@@ -11,13 +12,37 @@
 <a>Bağlantı, link etiketleri için kullanılır </a>
 <href>Bağlantının gideceği adresi belirtir</href>  -->
 
-<nav class="menu">
-  <ul>
-    <li><a href="#">Personel</a></li>
-    <li><a href="#">Birimler</a></li>
-    <li><a href="#">Şehirler</a></li>
-    <li><a href="#">Raporlar</a></li>
-    <li><a href="#">Öğrenim</a></li>
-  </ul>
-</nav>
+<div class="kolon sol">
+  <nav class="menu">
+    <ul>
+      <li><a href="#">Personel</a></li>
+      <li><a href="#">Birimler</a></li>
+      <li><a href="#">Şehirler</a></li>
+      <li><a href="#">Raporlar</a></li>
+      <li><a href="#">Öğrenim</a></li>
+    </ul>
+  </nav>
+</div>
+<div class="kolon data"><router-outlet></router-outlet>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
