Html css düzenlemeleri

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-
 <div class="baslik_div">
   <div class="kolon sol">LOGO</div>
   <div class="kolon orta">PERSONEL İNSAN KAYNAKLARI SİSTEMİ</div>
-  <div class="kolon sag">ÇIKIŞ YAP</div>
+  <div class="kolon sag"><a href="app"> ÇIKIŞ YAP </a></div>
 </div>
 
 
@@ -15,15 +14,16 @@
 <div class="kolon sol">
   <nav class="menu">
     <ul>
-      <li><a href="#">Personel</a></li>
-      <li><a href="#">Birimler</a></li>
-      <li><a href="#">Şehirler</a></li>
-      <li><a href="#">Raporlar</a></li>
-      <li><a href="#">Öğrenim</a></li>
+      <li><a href="app/personel">Personel</a></li>
+      <li><a href="app/unit">Birimler</a></li>
+      <li><a href="app/city">Şehirler</a></li>
+      <li><a href="app/report">Raporlar</a></li>
+      <li><a href="app/education">Öğrenim</a></li>
     </ul>
   </nav>
 </div>
-<div class="kolon data"><router-outlet></router-outlet>
+<div class="kolon data">
+  <router-outlet></router-outlet>
 </div>
 
 
