Html css düzenlemeleri

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,8 @@
   </nav>
 </div>
 <div class="kolon data">
+  <!-- Bu angularin bir generic compananeti: Bu yönlendirmelerdeki(routuingteki) companenti yürütüyor. Bir kere tanımlamamız yeterli.
+  Burada mesela kolon data içinde gelecek işlemler, Menü içine bu tagi açsaydık oraya gelecekti -->
   <router-outlet></router-outlet>
 </div>
 
