--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -1,1 +1,31 @@
-<p>city works!</p>
+<div class="header" style="color:darkblue">
+  ŞEHİR LİSTESİ
+  <p-button label="Success" severity="success" (click)="saveCity()"/>
+
+</div>
+
+<div class="tablo">
+  <p-table
+    [value]="customers"
+    [paginator]="true"
+    [rows]="2"
+    [tableStyle]="{ 'min-width': '100rem' }"
+    [rowsPerPageOptions]="[2, 4, 8]"
+  >
+    <ng-template #header>
+      <tr>
+        <th style="width:25%">Adı</th>
+        <th style="width:25%">Soyadı</th>
+        <th style="width:25%">Sehiri</th>
+      </tr>
+    </ng-template>
+    <ng-template #body let-customer>
+      <tr>
+        <td>{{ customer.first_name }}</td>
+        <td>{{ customer.last_name }}</td>
+        <td>{{ customer.city }}</td>
+
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
