--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -1,8 +1,10 @@
 <div class="header" style="color:darkblue">
   ŞEHİR LİSTESİ
+
   <p-button label="Success" severity="success" (click)="saveCity()"/>
   <div class="islem">
-    <p-button icon="pi pi-plus" [rounded]="true" [text]="true" (click)="saveCity()l" severity="info"/>
+    <p-button icon="pi pi-plus" [rounded]="true" [text]="true" (click)="saveCity()" severity="info"/>
+
   </div>
 
 
