--- a/src/app/city/city.component.css
+++ b/src/app/city/city.component.css
@@ -10,3 +10,10 @@
   display: flex;
   position: fixed;
 }
+
+.islem {
+  left: 1000px;
+  display: flex;
+  justify-content: flex-end;
+  width: 1650px;
+}
