--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -1,11 +1,26 @@
 <div class="header" style="color:darkblue">
   ŞEHİR LİSTESİ
-
-  <p-button label="Success" severity="success" (click)="saveCity()"/>
-  <div class="islem">
-    <p-button icon="pi pi-plus" [rounded]="true" [text]="true" (click)="saveCity()" severity="info"/>
-
-  </div>
+  <p-button icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true" (click)="showDialog()" severity="info"/>
+  <p-dialog header="Şehir Ekle" [modal]="true" [(visible)]="visible" [style]="{ width: '30rem', height: '25rem',color:'blue' }">
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="Adı" pInputText/>
+        <label for="Adı">Şehir Adı</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="Plaka Kodu" pInputText/>
+        <label for="Plaka Kodu">Plaka Kodu</label>
+      </p-floatlabel>
+    </div>
+    <div style="float:right;">
+      <p-button label="İPTAL" severity="secondary" (click)="visible = false"/>
+      <p-button [style]="{ margin:'2rem'}" label="KAYDET" (click)="visible = false"/>
+    </div>
+  </p-dialog>
 
 
 </div>
