--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -1,24 +1,25 @@
 <div class="header" style="color:darkblue">
   ŞEHİR LİSTESİ
   <p-button icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true" (click)="showDialog()" severity="info"/>
-  <p-dialog header="Şehir Ekle" [modal]="true" [(visible)]="visible" [style]="{ width: '30rem', height: '25rem',color:'blue' }">
+  <p-dialog header="Şehir Ekle" [modal]="true" [(visible)]="visible"
+            [style]="{ width: '30rem', height: '25rem',color:'blue' }">
     <br/>
     <div>
       <p-floatlabel>
-        <input [style]="{ width: '100%' }" id="Adı" pInputText/>
+        <input [style]="{ width: '100%' }" id="Adı" pInputText [(ngModel)]="cityName"/>
         <label for="Adı">Şehir Adı</label>
       </p-floatlabel>
     </div>
     <br/>
     <div>
       <p-floatlabel>
-        <input [style]="{ width: '100%' }" id="Plaka Kodu" pInputText/>
+        <input [style]="{ width: '100%' }" id="Plaka Kodu" pInputText [(ngModel)]="cityCode"/>
         <label for="Plaka Kodu">Plaka Kodu</label>
       </p-floatlabel>
     </div>
     <div style="float:right;">
-      <p-button label="İPTAL" severity="secondary" (click)="visible = false"/>
-      <p-button [style]="{ margin:'2rem'}" label="KAYDET" (click)="visible = false"/>
+      <p-button label="İPTAL" severity="secondary" (onClick)="cancel()"/>
+      <p-button [style]="{ margin:'2rem'}" label="KAYDET"  (onClick)="saveCity()"/>
     </div>
   </p-dialog>
 
