--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -1,3 +1,4 @@
+<p-toast/>
 <div class="header" style="color:darkblue">
   ŞEHİR LİSTESİ
   <p-button icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true" (click)="showDialog()" severity="info"/>
