--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -1,1 +1,127 @@
-<p>personel works!</p>
+<p-toast/>
+<div class="header" style="color:darkblue">
+  PERSONEL LİSTESİ
+  <p-button icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true" (click)="showDialog()" severity="info"/>
+  <p-dialog header="Personel Ekle" [modal]="true" [(visible)]="visible"
+            [style]="{ width: '30rem', height: '25rem',color:'blue' }">
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="Adı" pInputText [(ngModel)]="personName"/>
+        <label for="Adı">Adı</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="Soyad" pInputText [(ngModel)]="personLastName"/>
+        <label for="Soyad">Soyadı</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="kullanici_adi" pInputText [(ngModel)]="personUserName"/>
+        <label for="kullanici_adi">Kullanıcı Adı</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="aciklama" pInputText [(ngModel)]="personDescription"/>
+        <label for="aciklama">Açıklama</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="bolum" pInputText [(ngModel)]="personBolum"/>
+        <label for="bolum">Bölüm</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <p-datepicker [style]="{ width: '100%'}" [(ngModel)]="personBirthDay"
+                      [showIcon]="true" [showOnFocus]="false" id="birth_day"/>
+        <label [style]="{ fontSize:'0.5rem;'}" for="birth_day">Doğum Tarihi</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="Address" pInputText [(ngModel)]="personAdres_id"/>
+        <label for="Address">Adres</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="Sehir" pInputText [(ngModel)]="personCity_id"/>
+        <label for="Sehir">Şehir</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="Unit" pInputText [(ngModel)]="personUnit_id"/>
+        <label for="Unit">Birimi</label>
+      </p-floatlabel>
+    </div>
+    <div style="float:right;">
+      <p-button label="İPTAL" severity="secondary" (onClick)="cancel()"/>
+      <p-button *ngIf="!isEditButton" [style]="{ margin:'2rem'}" (onClick)="save() ">KAYDET</p-button>
+      <p-button *ngIf="isEditButton" [style]="{ margin:'2rem'}" (onClick)="updatePerson()"> GÜNCELLE</p-button>
+
+    </div>
+  </p-dialog>
+</div>
+
+<div class="tablo">
+  <p-scrollpanel [style]="{ width: '100%', height: '550px' }">
+    <p-table
+      [value]="personeller"
+      [paginator]="true"
+      [rows]="10"
+      [tableStyle]="{ 'min-width': '100rem' }"
+      [rowsPerPageOptions]="[2, 4, 8]">
+      <ng-template #header>
+        <tr>
+          <th style="width:25%; color:#2f2f47">Adı</th>
+          <th style="width:25%; color:#1e1e2f">Soyadı</th>
+          <th style="width:25%; color:#1e1e2f">Açıklama</th>
+          <th style="width:25%; color:#1e1e2f">Durumu</th>
+          <th style="width:25%; color:#1e1e2f">Oluşturma tarihi</th>
+          <th style="width:25%; color:#1e1e2f">Bölüm</th>
+          <th style="width:25%; color:#1e1e2f">Adres</th>
+          <th style="width:25%; color:#1e1e2f">Şehir Adı</th>
+          <th style="width:25%; color:#1e1e2f">Birim</th>
+          <th style="width:25%; color:#1e1e2f">Doğum Tarihi</th>
+          <th style="width:25%; color:#1e1e2f">İşlem</th>
+        </tr>
+      </ng-template>
+      <ng-template #body let-personel>
+        <tr>
+          <td>{{ personel.firstName }}</td>
+          <td>{{ personel.lastName }}</td>
+          <td>{{ personel.description }}</td>
+          <td>{{ personel.status }}</td>
+          <td>{{ personel.createDate | date: 'MM/dd/yyyy HH:mm' }}</td>
+          <td>{{ personel.bolum }}</td>
+          <td>{{ personel.adres?.description }}</td>
+          <td>{{ personel.city?.name }}</td>
+          <td>{{ personel.unit?.code }}</td>
+          <td>{{ personel.birthDate | date: 'MM/dd/yyyy' }}</td>
+          <td>
+            <p-button [style]="{ marginRight:'0.5rem'}" icon="pi pi-trash" (click)="deletePerson(personel)"
+                      severity="danger"
+                      rounded title="Sil"/>
+            <p-button [style]="{ marginRight:'0.5rem'}" icon="pi pi-pencil" (click)="edit(personel)"
+                      severity="info" rounded
+                      title="Düzenle"/>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </p-scrollpanel>
+</div>
