--- a/src/app/unit/unit.component.html
+++ b/src/app/unit/unit.component.html
@@ -1,9 +1,33 @@
+<p-toast/>
 <div class="header" style="color:darkblue">
-  UNİT LİSTESİ
-  <p-button class="btn-islem" icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true" (click)="openDialog()"
-            severity="info"/>
-</div>
+  BİRİM LİSTESİ
+  <p-button icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true" (click)="showDialog()" severity="info"/>
+  <p-dialog header="Birim Ekle" [modal]="true" [(visible)]="visible"
+            [style]="{ width: '30rem', height: '25rem',color:'blue' }">
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="Adı" pInputText [(ngModel)]="unitName"/>
+        <label for="Adı">Birim Adı</label>
+      </p-floatlabel>
+    </div>
+    <br/>
+    <div>
+      <p-floatlabel>
+        <input [style]="{ width: '100%' }" id="Plaka Kodu" pInputText [(ngModel)]="unitCode"/>
+        <label for="Plaka Kodu">Birim Kodu</label>
+      </p-floatlabel>
+    </div>
+    <div style="float:right;">
+      <p-button label="İPTAL" severity="secondary" (onClick)="cancel()"/>
+      <p-button *ngIf="!isEditButton" [style]="{ margin:'2rem'}" (onClick)="saveUnit() ">KAYDET</p-button>
+      <p-button *ngIf="isEditButton" [style]="{ margin:'2rem'}" (onClick)="updateUnit()"> GÜNCELLE</p-button>
 
+    </div>
+  </p-dialog>
+
+
+</div>
 
 <div class="tablo">
   <p-table
@@ -26,9 +50,21 @@
         <td>{{ unit.id }}</td>
         <td>{{ unit.name }}</td>
         <td>{{ unit.code }}</td>
-        <td>{{ unit.createDate }}</td>
+        <td>{{ unit.createDate | date: 'MM/dd/yyyy HH:mm'}}</td>
+
+        <td style="padding-left: 3px; padding-right:5px">
+          <p-button icon="pi pi-trash" (click)="deleteUnit(unit)" severity="danger"
+                    rounded title="Sil"/>
+        </td>
+
+        <td>
+          <p-button icon="pi pi-pencil" (click)="editUnit(unit)" severity="info" rounded
+                    title="Düzenle"/>
+        </td>
 
       </tr>
+
+
     </ng-template>
   </p-table>
 </div>
