--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 <div class="kolon sol">
   <nav class="menu">
     <ul>
+      <li><a href="app/main">AnaSayfa</a></li>
       <li><a href="app/personel">Personel</a></li>
       <li><a href="app/unit">Birimler</a></li>
       <li><a href="app/city">Şehirler</a></li>
