--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -3,7 +3,7 @@
   PERSONEL LİSTESİ
   <p-button icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true" (click)="showDialog()" severity="info"/>
   <p-dialog header="Personel Ekle" [modal]="true" [(visible)]="visible"
-            [style]="{ width: '30rem', height: '25rem',color:'blue' }">
+            [style]="{ width: '35rem', height: '40rem',color:'blue' }">
     <br/>
     <div>
       <p-floatlabel>
@@ -74,17 +74,35 @@
     <p-dropdown
       [options]="units"
       [(ngModel)]="personUnit_id"
-      optionLabel="name"
+      optionLabel="code"
       optionValue="id"
       placeholder="Birim Seç"
       [style]="{ width: '100%' }"
     />
+
     <div style="float:right;">
       <p-button label="İPTAL" severity="secondary" (onClick)="cancel()"/>
       <p-button *ngIf="!isEditButton" [style]="{ margin:'2rem'}" (onClick)="save() ">KAYDET</p-button>
       <p-button *ngIf="isEditButton" [style]="{ margin:'2rem'}" (onClick)="updatePerson()"> GÜNCELLE</p-button>
 
     </div>
+    <br/>
+    <br/>
+    <br/>
+    <p-tabs value="0">
+      <p-tablist>
+        <p-tab value="0">Adres</p-tab>
+
+      </p-tablist>
+      <p-tabpanels>
+          <p class="m-0">
+            DENEME
+          </p>
+
+
+      </p-tabpanels>
+    </p-tabs>
+
   </p-dialog>
 </div>
 
