--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -4,7 +4,7 @@
   PERSONEL LİSTESİ
   <p-button icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true" (click)="showDialog()" severity="info"/>
   <p-dialog header="Personel Ekle" [modal]="true" [(visible)]="visible"
-            [style]="{ width: '35rem', height: '40rem',color:'blue' }">
+            [style]="{ width: '50rem', height: '45rem',color:'blue' }">
     <br/>
     <div>
       <p-floatlabel>
@@ -50,6 +50,15 @@
     </div>
     <br/>
 
+    <div *ngIf="!isEditButton" >
+      <p-floatlabel  >
+        <input [style]="{ width: '100%' }" id="adres_aciklama" pInputText [(ngModel)]="personAdresDescription"/>
+        <label for="adres_aciklama">Adres Açıklaması</label>
+      </p-floatlabel>
+    </div>
+
+    <br/>
+
     <div>
       <p-floatlabel>
         <p-dropdown
@@ -74,28 +83,37 @@
       [style]="{ width: '100%' }"
     />
 
+
+    <br/>
+    <br/>
+    <br/>
+    <p-tabs *ngIf="isEditButton" value="0">
+      <p-tablist>
+        <p-tab value="0">Adres</p-tab>
+        <p-tab value="1">Contact</p-tab>
+      </p-tablist>
+      <p-tabpanels>
+        <p-tabpanel value="0">
+          <p class="m-0">
+            Adres
+          </p>
+        </p-tabpanel>
+        <p-tabpanel value="1">
+          <p class="m-0">
+            Contact
+          </p>
+        </p-tabpanel>
+      </p-tabpanels>
+    </p-tabs>
+
+
+    <br/>
     <div style="float:right;">
       <p-button label="İPTAL" severity="secondary" (onClick)="cancel()"/>
       <p-button *ngIf="!isEditButton" [style]="{ margin:'2rem'}" (onClick)="save() ">KAYDET</p-button>
       <p-button *ngIf="isEditButton" [style]="{ margin:'2rem'}" (onClick)="updatePerson()"> GÜNCELLE</p-button>
 
     </div>
-    <br/>
-    <br/>
-    <br/>
-    <p-tabs value="0">
-      <p-tablist>
-        <p-tab value="0">Adres</p-tab>
-
-      </p-tablist>
-      <p-tabpanels>
-        <p class="m-0">
-          DENEME
-        </p>
-
-
-      </p-tabpanels>
-    </p-tabs>
 
   </p-dialog>
 </div>
@@ -116,7 +134,6 @@
           <th style="width:25%; color:#1e1e2f">Durumu</th>
           <th style="width:25%; color:#1e1e2f">Oluşturma tarihi</th>
           <th style="width:25%; color:#1e1e2f">Bölüm</th>
-          <th style="width:25%; color:#1e1e2f">Adres</th>
           <th style="width:25%; color:#1e1e2f">Şehir Adı</th>
           <th style="width:25%; color:#1e1e2f">Birim</th>
           <th style="width:25%; color:#1e1e2f">Doğum Tarihi</th>
@@ -131,7 +148,6 @@
           <td>{{ personel.status }}</td>
           <td>{{ personel.createDate | date: 'MM/dd/yyyy HH:mm' }}</td>
           <td>{{ personel.bolum }}</td>
-          <td>{{ personel.adres?.description }}</td>
           <td>{{ personel.city?.name }}</td>
           <td>{{ personel.unit?.code }}</td>
           <td>{{ personel.birthDate | date: 'MM/dd/yyyy' }}</td>
