--- a/src/app/address/address.component.html
+++ b/src/app/address/address.component.html
@@ -1,1 +1,48 @@
-<p>address works!</p>
+<div>
+  <p-button icon="pi pi-plus" label="Yeni Adres" [rounded]="true" [text]="true"
+            (click)="showDialogAdres()" severity="info"/>
+
+  <p-dialog header="Adres" [modal]="true" [(visible)]="adresDialogVisible"
+            [baseZIndex]="1000" [style]="{ width: '30rem'}">
+
+    <div>
+      <p-floatlabel>
+        <input id="adresDesc" pInputText [(ngModel)]="adresDescription" style="width: 100%"/>
+        <label for="adresDesc">Adres Açıklaması</label>
+      </p-floatlabel>
+    </div>
+
+    <br/>
+    <div style="text-align:right;">
+      <p-button label="İPTAL" severity="secondary" (onClick)="cancelAdres()"/>
+      <p-button *ngIf="!isEditButton" [style]="{ margin:'2rem'}" (onClick)="saveAdres()" label="KAYDET"/>
+      <p-button *ngIf="isEditButton" [style]="{ margin:'2rem'}" (onClick)="updateAdres()" label="GÜNCELLE"/>
+    </div>
+  </p-dialog>
+</div>
+
+
+<p-scrollpanel [style]="{ width: '100%', height: '400px' }">
+  <p-table [value]="addressList" [rows]="10" [responsiveLayout]="'scroll'" [tableStyle]="{ 'min-width': '25rem' }">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Açıklama</th>
+        <th>Oluşturma Tarihi</th>
+        <th>İşlem</th>
+      </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-adres>
+      <tr>
+        <td>{{ adres.description }}</td>
+        <td>{{ adres.createDate | date: 'dd/MM/yyyy HH:mm' }}</td>
+        <td>
+          <p-button icon="pi pi-pencil" (click)="editAdres(adres)" severity="info" rounded title="Düzenle"
+                    [style]="{ marginRight:'0.5rem'}"/>
+          <p-button icon="pi pi-trash" (click)="confirmDelete2($event, adres.id)" severity="danger" rounded
+                    title="Sil"/>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+</p-scrollpanel>
