--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -2,8 +2,11 @@
 <p-confirmDialog></p-confirmDialog>
 <div class="header" style="color:darkblue">
   PERSONEL LİSTESİ
-  <p-button icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true" (click)="showDialog()" severity="info"/>
+  <p-button icon="pi pi-plus" title="Yeni Kayıt" [rounded]="true" [text]="true"
+            (click)="showDialog()" severity="info"/>
+
   <p-dialog header="Personel Ekle" [modal]="true" [(visible)]="visible"
+            [baseZIndex]="1000"
             [style]="{ width: '50rem', height: '45rem',color:'blue' }">
     <br/>
     <div>
@@ -50,8 +53,8 @@
     </div>
     <br/>
 
-    <div *ngIf="!isEditButton" >
-      <p-floatlabel  >
+    <div *ngIf="!isEditButton">
+      <p-floatlabel>
         <input [style]="{ width: '100%' }" id="adres_aciklama" pInputText [(ngModel)]="personAdresDescription"/>
         <label for="adres_aciklama">Adres Açıklaması</label>
       </p-floatlabel>
@@ -65,6 +68,7 @@
           [options]="cities"
           [(ngModel)]="personCity_id"
           optionLabel="name"
+
           optionValue="id"
           placeholder="şehir seç"
           [style]="{ width: '100%' }"
@@ -86,17 +90,18 @@
 
     <br/>
     <br/>
-    <br/>
+
+
     <p-tabs *ngIf="isEditButton" value="0">
       <p-tablist>
         <p-tab value="0">Adres</p-tab>
         <p-tab value="1">Contact</p-tab>
       </p-tablist>
+
+
       <p-tabpanels>
         <p-tabpanel value="0">
-          <p class="m-0">
-            Adres
-          </p>
+          <app-address *ngIf="personId" [personId]="personId"></app-address>
         </p-tabpanel>
         <p-tabpanel value="1">
           <p class="m-0">
@@ -116,7 +121,10 @@
     </div>
 
   </p-dialog>
+
+
 </div>
+
 
 <div class="tablo">
   <p-scrollpanel [style]="{ width: '100%', height: '550px' }">
