--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -95,7 +95,7 @@
     <p-tabs *ngIf="isEditButton" value="0">
       <p-tablist>
         <p-tab value="0">Adres</p-tab>
-        <p-tab value="1">Contact</p-tab>
+        <p-tab value="1">İletişim</p-tab>
       </p-tablist>
 
 
@@ -104,9 +104,7 @@
           <app-address *ngIf="personId" [personId]="personId"></app-address>
         </p-tabpanel>
         <p-tabpanel value="1">
-          <p class="m-0">
-            Contact
-          </p>
+          <app-contact *ngIf="personId" [personId]="personId"></app-contact>
         </p-tabpanel>
       </p-tabpanels>
     </p-tabs>
