--- a/src/app/unit/unit.component.html
+++ b/src/app/unit/unit.component.html
@@ -30,6 +30,7 @@
 
 </div>
 
+<p-scrollpanel>
 <div class="tablo">
   <p-table
     [value]="birimler"
@@ -69,3 +70,4 @@
     </ng-template>
   </p-table>
 </div>
+</p-scrollpanel>
