--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div>
-  <p-button icon="pi pi-plus" label="Yeni Adres" [rounded]="true" [text]="true"
+  <p-button icon="pi pi-plus" label="YENİ" [rounded]="true" [text]="true"
             (click)="contactShowDialog()" severity="info"/>
 
   <p-dialog header="Adres" [modal]="true" [(visible)]="contactDialogVisible"
